--- a/RobloxMyPrisonCalculator.html
+++ b/RobloxMyPrisonCalculator.html
@@ -140,13 +140,13 @@
 
     const mediumSecurityExtras = [
       { name: "Push-up Mats (Medium Security)", per: 5 },
-      { name: "Isolation Chairs (MSP)", per: 10 },
+      { name: "Isolation Chairs (Medium Security)", per: 10 },
     ];
 
     const highSecurityExtras = [
       { name: "Pull-up Bars (High Security)", per: 3 },
-      { name: "Guard Towers", per: 15, isStaff: true },
-      { name: "Isolation Chairs (HSP)", per: 10 },
+      { name: "Guard Towers (High Security)", per: 15, isStaff: true },
+      { name: "Isolation Chairs (High Security)", per: 10 },
     ];
 
     function calculateNecessities() {
